@@ -21,10 +21,12 @@
         "tracy/tracy": "~2.4"
     },
     "require-dev": {
-        "nette/robot-loader": "~2.4"
+        "nette/robot-loader": "~2.4",
+        "nette/di": "~2.4"
     },
     "suggest": {
-        "nette/robot-loader": "Needed for automated tests runner."
+        "nette/robot-loader": "Needed for automated tests runner.",
+        "nette/di": ""
     },
     "autoload": {
         "psr-4": {
